--- a/bin/prep_dm_jobs_config_example.ini
+++ b/bin/prep_dm_jobs_config_example.ini
@@ -1,6 +1,8 @@
 ; Config for prep_dm_var_jobs.py
 [misc]
 dmt_path = /nfs/research1/beltrao/ally/mutations/bin/dmt.py
+table_grep = /nfs/research1/beltrao/ally/mutations/bin/table_grep.sh
+
 dummy_run = False
 
 [lsf]
