Modified foldx jobs to run in parralel to speed up computation, including foldx_cat script to combine the output

--- a/bin/prep_dm_jobs_config_example.ini
+++ b/bin/prep_dm_jobs_config_example.ini
@@ -1,8 +1,7 @@
 ; Config for prep_dm_var_jobs.py
 [misc]
-dmt_path = /nfs/research1/beltrao/ally/mutations/bin/dmt.py
+bin_path = /nfs/research1/beltrao/ally/mutations/bin
 table_grep = /nfs/research1/beltrao/ally/mutations/bin/table_grep.sh
-
 dummy_run = False
 
 [lsf]
